# json_parser

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
json_parser/: __init__.py  cli.py  commodity_json_parser.py
json_parser/libs/: __init__.py  berat_field.py  komoditas_field.py  transform.py
tests/: conftest.py  result-2-part.json  result-2.json  soal-2-part.json  test_commodity_json_parser.py
